--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -6,7 +6,7 @@
 }
 
 .NavigationItem a {
-  color: #8f5c2c;
+  color: black;
   text-decoration: none;
   width: 100%;
   box-sizing: border-box;
@@ -16,7 +16,7 @@
 .NavigationItem a:hover,
 .NavigationItem a:active,
 .NavigationItem a.active {
-  color: #40a4c8;
+  color: black;
 }
 
 @media (min-width: 500px) {
@@ -29,17 +29,17 @@
   }
 
   .NavigationItem a {
-    color: white;
+    color: black;
     height: 100%;
     padding: 16px 10px;
     border-bottom: 4px solid transparent;
+    margin: auto 10px;
   }
 
   .NavigationItem a:hover,
   .NavigationItem a:active,
   .NavigationItem a.active {
-    background-color: #8f5c2c;
     border-bottom: 4px solid #40a4c8;
-    color: white;
+    color: black;
   }
 }
