--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -1,5 +1,7 @@
 .Button {
-  background-color: #bdc0b8;
+  margin-left: 5px;
+  border-radius: 6px 6px;
+  background-color: #e8e9e7;
   border: none;
   color: white;
   outline: none;
@@ -10,9 +12,8 @@
   font-weight: bold;
 }
 
-.Button:first-of-type {
-  margin-left: 0;
-  padding-left: 0;
+.Button:hover {
+  background-color: #989c95;
 }
 
 .Button:disabled {
