--- a/src/containers/HomePage/HomePage.module.css
+++ b/src/containers/HomePage/HomePage.module.css
@@ -1,3 +1,36 @@
-.News {
+.Header {
   text-align: center;
+  color: #397684;
+}
+
+.ListNews {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  padding: 20px;
+  justify-content: center;
+}
+
+.New {
+  border: 1px solid rgba(0, 0, 0, 0.8);
+}
+
+/* custom scrollbar */
+
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d6dee1;
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a8bbbf;
 }
