--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -8,8 +8,10 @@
   cursor: pointer;
   font: inherit;
   padding: 10px;
-  margin: 10px;
+  /* margin: 10px; */
   font-weight: bold;
+  width: 100%;
+  margin: 20px auto;
 }
 
 .Button:hover {
