--- a/src/containers/Login/Login.module.css
+++ b/src/containers/Login/Login.module.css
@@ -1,11 +1,36 @@
+.LoginContainer {
+  height: 100vh;
+  background-color: #f3f4f4;
+}
+
 .Login {
   margin: 20px auto;
   width: 80%;
   text-align: center;
-  box-shadow: 0 2px 3px #ccc;
-  border: 1px solid #eee;
+  /* box-shadow: 0 2px 3px #ccc;
+  border: 1px solid #eee; */
   padding: 10px;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
+  margin-top: 5px;
+}
+
+.InputElement {
+  display: block;
+  text-align: left;
+}
+
+.InputType {
+  margin-bottom: 5px;
+}
+
+.ForgotPassword {
+  margin-top: 20px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.ForgotPasswordLink {
+  text-decoration: none;
 }
 
 @media (min-width: 600px) {
