--- a/src/components/UI/Footer/Footer.module.css
+++ b/src/components/UI/Footer/Footer.module.css
@@ -1,6 +1,6 @@
 .FooterContainer {
   background-color: rgb(149, 212, 228);
-  position: absolute;
+  position: fix;
   bottom: 0;
   width: 100%;
   height: 60px;
