--- a/src/components/NewPage/NewPage.module.css
+++ b/src/components/NewPage/NewPage.module.css
@@ -1,18 +1,34 @@
 .NewContainer {
-  padding-right: 2rem;
-  padding-left: 2rem;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: 20px;
-  max-width: 1140px;
+  padding: 30px 15px;
 }
 
-.Wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: -2rem;
-  margin-left: -2rem;
+.HeaderContainer {
+  text-align: center;
+  margin: 0 auto 40px;
 }
 
-.TitleAndContent {
+.ContentContainer {
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+span {
+  font-size: 14px;
+  font-weight: 300;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  color: #999;
+}
+
+h2 {
+  font-family: Playfair Display, serif;
+  font-size: 30px;
+}
+
+p {
+  font-size: 18px;
+  line-height: 1.6em;
+  margin-bottom: 20px;
+  color: #666;
+  font-weight: 300;
 }
