Working on sign up module - longho - 13.04.2021

--- a/src/components/UI/Footer/Footer.module.css
+++ b/src/components/UI/Footer/Footer.module.css
@@ -1,5 +1,5 @@
 .FooterContainer {
-  background-color: rgb(149, 212, 228);
+  background-color: #07627e;
   position: fix;
   bottom: 0;
   width: 100%;
