--- a/src/containers/ForgotPassword/ForgotPassword.module.css
+++ b/src/containers/ForgotPassword/ForgotPassword.module.css
@@ -20,6 +20,10 @@
   margin-bottom: 5px;
 }
 
+.FgPasswordText {
+  color: #666;
+}
+
 @media (min-width: 600px) {
   .FgPassword {
     width: 500px;
