--- a/src/hoc/Layout/Layout.module.css
+++ b/src/hoc/Layout/Layout.module.css
@@ -1,9 +1,12 @@
 .Container {
   position: relative;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .Content {
   margin-top: 72px;
   height: 100vh;
+  flex: 1;
 }
