Working on forgot password + styling - 18.04.2021

--- a/src/components/UI/Input/Input.module.css
+++ b/src/components/UI/Input/Input.module.css
@@ -34,4 +34,13 @@
 .ValidationError {
   color: red;
   margin: 5px 0;
+  font-size: 13px;
+}
+
+input {
+  border-radius: 5px;
+}
+
+input::-webkit-input-placeholder {
+  font-size: 13px;
 }
