--- a/src/components/UI/Modal/VerifyModal/VerifyModal.module.css
+++ b/src/components/UI/Modal/VerifyModal/VerifyModal.module.css
@@ -6,6 +6,7 @@
 
 .VerifyHeader {
   text-align: center;
+  margin-bottom: 15px;
 }
 
 .VerifyInput {
@@ -34,8 +35,28 @@
 
 .Verified {
   color: green;
+  font-size: 15px;
+  margin-bottom: 10px;
 }
 
 .InvalidVerified {
   color: red;
+}
+
+.ForgotPasswordInput {
+  height: 30px;
+  /* text-align: center; */
+  margin-bottom: 10px;
+}
+
+.PasswordRequirement {
+  font-size: 12px;
+  margin-top: 0;
+  margin-bottom: 10px;
+  color: #666;
+}
+
+.InputType {
+  margin-bottom: 5px;
+  margin-top: 15px;
 }
