Working on navbar after login successful - 21.04.2021

--- a/src/components/Navigation/NavigationItems/NavigationItems.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItems.module.css
@@ -8,6 +8,15 @@
   height: 100%;
 }
 
+.ProfileContainer {
+  display: flex;
+}
+
+.ProfileIcon {
+  margin-top: 17px;
+  margin-right: -12px;
+}
+
 @media (min-width: 500px) {
   .NavigationItems {
     flex-flow: row;
