Working on flow after log in successful - 22.04.2021

--- a/src/containers/Login/Login.module.css
+++ b/src/containers/Login/Login.module.css
@@ -51,6 +51,12 @@
   text-decoration: none;
 }
 
+.LoadingModal {
+  background: none;
+  border: none;
+  box-shadow: none;
+}
+
 @media (min-width: 600px) {
   .Login {
     width: 500px;
