--- a/src/containers/Testing/Testing.module.css
+++ b/src/containers/Testing/Testing.module.css
@@ -15,8 +15,32 @@
   padding-top: 7px;
 }
 
-.TestingBody_Navbar_line {
-  width: 112px;
-  height: 47px;
-  border-bottom: 1px solid black;
+.TestingBody_Navbar_Button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 20px auto;
+}
+
+.Button {
+  border-radius: 6px 6px;
+  border: none;
+  color: white;
+  outline: none;
+  cursor: pointer;
+  font: inherit;
+  padding: 10px;
+  font-weight: bold;
+  width: fit-content;
+  margin: auto 0;
+  color: #a8a8a8;
+  background: none;
+}
+
+.Button:hover {
+  color: #07627e;
+}
+
+.Button:focus {
+  color: #07627e;
 }
