--- a/src/components/DateAndLocationRegistration/DateAndLocationRegistration.module.css
+++ b/src/components/DateAndLocationRegistration/DateAndLocationRegistration.module.css
@@ -1,17 +1,47 @@
+.Container {
+  background-color: #f3f4f4;
+}
+
 .RegistrationContainer {
   height: 100vh;
-  background-color: #f3f4f4;
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
+  margin: 10px 80px;
 }
 
 .RegistrationHeader {
   display: flex;
   margin: 10px 20px;
-  justify-content: space-around;
 }
 
 .RegistrationBody {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   background: white;
-  border-radius: 35px 20px;
+  border-radius: 36px;
+}
+
+.RegistrationBody_Header {
+  margin-top: 20px;
+  margin-left: 50px;
+}
+
+.RegistrationBody_Content {
+  display: flex;
+  flex-direction: row;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-bottom: 40px;
+  flex-wrap: wrap;
+  gap: 100px;
+}
+
+.react-datepicker-wrapper,
+.react-datepicker__input-container,
+.react-datepicker__input-container input {
+  display: block;
+  width: 100%;
+  font-size: 50px;
 }
