Working on test registration module - 26.04.2021

--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -40,3 +40,11 @@
   color: #a8a8a8;
   background: none;
 }
+
+.RegisterButton-Cancel {
+  color: #07627e;
+}
+
+.RegisterButton-Next {
+  background: #07627e;
+}
