--- a/src/components/DateAndLocationRegistration/DateAndLocationRegistration.module.css
+++ b/src/components/DateAndLocationRegistration/DateAndLocationRegistration.module.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  margin: 10px 80px;
+  margin: 10px 200px;
 }
 
 .RegistrationHeader {
@@ -35,13 +35,33 @@
   margin-right: 50px;
   margin-bottom: 40px;
   flex-wrap: wrap;
-  gap: 100px;
+  gap: 250px;
 }
 
-.react-datepicker-wrapper,
-.react-datepicker__input-container,
-.react-datepicker__input-container input {
-  display: block;
-  width: 100%;
-  font-size: 50px;
+.RegistrationBody_Buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 16px;
+}
+
+@media (max-width: 1200px) {
+  .RegistrationBody_Content {
+    gap: 120px;
+  }
+  .RegistrationContainer {
+    margin: 10px 120px;
+  }
+}
+
+@media (max-width: 1009px) {
+  .RegistrationBody_Content {
+    flex-direction: column;
+    gap: 50px;
+  }
+
+  .RegistrationContainer {
+    margin: 10px auto;
+  }
 }
