--- a/src/components/CheckHealthConditionsAndSymtomps/CheckHealthConditionsAndSymtomps.module.css
+++ b/src/components/CheckHealthConditionsAndSymtomps/CheckHealthConditionsAndSymtomps.module.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  margin: 0 200px;
+  margin: 0 300px;
 }
 
 .HAndSHeader {
@@ -43,16 +43,38 @@
   font-size: 50px;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1297px) {
+  .HAndSBody_HC_Content {
+    display: flex;
+    flex-direction: column;
+    margin-left: 80px;
+    margin-right: 80px;
+    margin-bottom: 40px;
+    flex-wrap: nowrap;
+    gap: 0;
+  }
+}
+
+@media (min-width: 1600px) {
+  .HealthConditionsAndSymtompsContainer {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin: 0 451px;
+  }
+}
+
+/* @media (max-width: 1366px) {
   .HAndSBody_HC_Content {
     gap: 120px;
   }
   .HealthConditionsAndSymtompsContainer {
     margin: 0 120px;
   }
-}
+} */
 
-@media (max-width: 1009px) {
+/* @media (max-width: 1009px) {
   .HAndSBody_HC_Content {
     flex-direction: column;
     gap: 50px;
@@ -61,4 +83,34 @@
   .HealthConditionsAndSymtompsContainer {
     margin: 0 auto;
   }
-}
+} */
+
+/* @media (min-width: 1367px) {
+  .HealthConditionsAndSymtompsContainer {
+    margin: 0 487px;
+  }
+} */
+
+/* @media (max-width: 1009px) {
+  .HAndSBody_HC_Content {
+    gap: 0;
+  }
+} */
+
+/* @media (min-width: 1201px) {
+  .HAndSBody_HC_Content {
+    gap: 120px;
+  }
+} */
+
+/* @media (max-width: 697px) {
+  .HAndSBody_HC_Content {
+    display: flex;
+    flex-direction: column;
+    margin-left: 80px;
+    margin-right: 80px;
+    margin-bottom: 40px;
+    flex-wrap: 0;
+    gap: 0;
+  }
+} */
