Basically finish registering testing date and location - 02.05.2021

--- a/src/components/DateAndLocationRegistration/DateAndLocationRegistration.module.css
+++ b/src/components/DateAndLocationRegistration/DateAndLocationRegistration.module.css
@@ -47,6 +47,14 @@
   gap: 16px;
 }
 
+.CancelButton {
+  min-width: 70px;
+}
+
+.NextButton {
+  min-width: 70px;
+}
+
 @media (max-width: 1200px) {
   .RegistrationBody_Content {
     gap: 120px;
