--- a/src/components/CheckHealthConditionsAndSymtomps/CheckHealthConditionsAndSymtomps.module.css
+++ b/src/components/CheckHealthConditionsAndSymtomps/CheckHealthConditionsAndSymtomps.module.css
@@ -1,10 +1,10 @@
 .Container {
   background-color: #f3f4f4;
-  height: 100vh;
+  height: 100%;
 }
 
 .HealthConditionsAndSymtompsContainer {
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
