--- a/src/containers/Testing/Testing.module.css
+++ b/src/containers/Testing/Testing.module.css
@@ -1,5 +1,5 @@
 .TestingContainer {
-  height: 100vh;
+  height: 100%;
   background-color: #f3f4f4;
   display: flex;
   flex-direction: column;
@@ -43,4 +43,28 @@
 
 .Button:focus {
   color: #07627e;
+}
+
+.TestingBody_Records {
+  overflow-y: auto;
+}
+
+.TestingBody_InfoRecords {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  background: white;
+  border-radius: 36px;
+  margin: 0 300px;
+  margin-bottom: 20px;
+}
+
+.InfoTestingContent {
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-left: 39px;
+  flex-wrap: wrap;
+  gap: 23px;
 }
