Finish location check-in module - 08.05.2021

--- a/src/containers/LocationCheckinHistory/LocationCheckinHistory.module.css
+++ b/src/containers/LocationCheckinHistory/LocationCheckinHistory.module.css
@@ -29,3 +29,15 @@
   flex-wrap: wrap;
   gap: 23px;
 }
+
+.CheckinRecord_Content_Time {
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+}
+
+.CheckinRecord_Content_Location {
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+}
