Almost Finish Itinerary Information module - 10.05.2021

--- a/src/components/UI/Modal/TestingRegistrationModal/TestingRegistrationModal.module.css
+++ b/src/components/UI/Modal/TestingRegistrationModal/TestingRegistrationModal.module.css
@@ -16,6 +16,12 @@
   color: red;
 }
 
+.ItineraryInfoHeader {
+  text-align: center;
+  margin-bottom: 15px;
+  color: black;
+}
+
 .Button {
   display: flex;
   justify-content: center;
