Finish Log out - 11.05.2021

--- a/src/containers/UserProfiles/ManageProfiles/ManageProfiles.module.css
+++ b/src/containers/UserProfiles/ManageProfiles/ManageProfiles.module.css
@@ -4,6 +4,15 @@
   background: white;
   border-radius: 36px;
   margin-bottom: 20px;
+  text-decoration: none;
+}
+
+.ManageProfilesContainer:visited {
+  color: black;
+}
+
+.ManageProfilesContainer:hover {
+  background-color: #c4c9c1;
 }
 
 .Icon {
