--- a/src/containers/UserProfiles/Logout/Logout.module.css
+++ b/src/containers/UserProfiles/Logout/Logout.module.css
@@ -3,6 +3,15 @@
   flex-direction: row;
   background: white;
   border-radius: 36px;
+  text-decoration: none;
+}
+
+.LogoutContainer:visited {
+  color: black;
+}
+
+.LogoutContainer:hover {
+  background-color: #c4c9c1;
 }
 
 .Icon {
