Working on Manage Profiles UI - 12.05.2021

--- a/src/containers/UserProfiles/ChangePassword/ChangePassword.module.css
+++ b/src/containers/UserProfiles/ChangePassword/ChangePassword.module.css
@@ -11,6 +11,10 @@
   color: black;
 }
 
+.ChangePasswordContainer:link {
+  color: black;
+}
+
 .ChangePasswordContainer:hover {
   background-color: #c4c9c1;
 }
