--- a/src/containers/UserProfiles/ManageProfiles/ManageProfiles.module.css
+++ b/src/containers/UserProfiles/ManageProfiles/ManageProfiles.module.css
@@ -11,6 +11,10 @@
   color: black;
 }
 
+.ManageProfilesContainer:link {
+  color: black;
+}
+
 .ManageProfilesContainer:hover {
   background-color: #c4c9c1;
 }
