Working on editing profiles - 12.05.2021

--- a/src/containers/ManageProfilesContainer/ManageProfilesContainer.module.css
+++ b/src/containers/ManageProfilesContainer/ManageProfilesContainer.module.css
@@ -25,7 +25,7 @@
 
 .UserName {
   margin-top: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
   margin-left: 80px;
 }
 
@@ -51,4 +51,8 @@
 .Buttons {
   margin-left: 80px;
   max-width: 120px;
+}
+
+.SectionItem1 {
+  margin-top: 15px;
 }
