--- a/src/components/DateAndLocationRegistration/DateAndLocationRegistration.module.css
+++ b/src/components/DateAndLocationRegistration/DateAndLocationRegistration.module.css
@@ -36,7 +36,7 @@
   margin-right: 50px;
   margin-bottom: 40px;
   flex-wrap: wrap;
-  gap: 250px;
+  justify-content: space-between;
 }
 
 .RegistrationBody_Buttons {
