--- a/src/containers/ItineraryInfo/ItineraryInfo.module.css
+++ b/src/containers/ItineraryInfo/ItineraryInfo.module.css
@@ -12,11 +12,10 @@
 }
 
 .ItineraryHeader {
-  margin: 25px 20px;
-}
-
-.ItineraryTitle {
-  margin-top: 0;
+  display: flex;
+  flex-direction: row;
+  margin: 0 10px 20px;
+  justify-content: space-between;
 }
 
 .ItineraryBody {
@@ -69,4 +68,8 @@
 
 .SubmitButton {
   min-width: 100px;
+}
+
+.ItineraryHistoryButton {
+  min-width: 150px;
 }
