Working on delete location checkin - 21.05.2021

--- a/src/containers/LocationCheckinHistory/LocationCheckinHistory.module.css
+++ b/src/containers/LocationCheckinHistory/LocationCheckinHistory.module.css
@@ -41,3 +41,10 @@
   flex-direction: row;
   gap: 12px;
 }
+
+.EditAndDelete {
+  display: flex;
+  flex-direction: column;
+  margin: auto 39px;
+  gap: 5px;
+}
