--- a/src/containers/ItineraryHistory/ItineraryHistory.module.css
+++ b/src/containers/ItineraryHistory/ItineraryHistory.module.css
@@ -31,6 +31,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 
 .Arrow {
@@ -42,4 +43,5 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
