Working on uploading profile image and styling news - 01.06.2021

--- a/src/components/NewPage/NewPage.module.css
+++ b/src/components/NewPage/NewPage.module.css
@@ -52,9 +52,13 @@ p {
   font-weight: 300;
 }
 
+.ImageContainer {
+  text-align: center;
+}
+
 .PostImage {
   object-fit: cover;
-  width: 100%;
+  width: 80%;
   height: 500px;
 }
 
