Fix bug registering testing location - 02.06.2021

--- a/src/components/DateAndLocationRegistration/DateAndLocationRegistration.module.css
+++ b/src/components/DateAndLocationRegistration/DateAndLocationRegistration.module.css
@@ -34,9 +34,10 @@
   flex-direction: row;
   margin-left: 50px;
   margin-right: 50px;
+  margin-top: 40px;
   margin-bottom: 40px;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .RegistrationBody_Buttons {
