Edit UI upload file button and add pagination for checkin history - 04.06.2021

--- a/src/components/UserInfo/UserInfo.module.css
+++ b/src/components/UserInfo/UserInfo.module.css
@@ -28,12 +28,15 @@
 }
 
 .UploadImageButton {
+  padding: 5px 10px;
+  border-radius: 5px;
+  background: #3c92ad;
   margin: auto;
   height: fit-content;
   border: none;
-  background: none;
 }
 
 .UploadImageButton:hover {
   cursor: pointer;
+  background: #286477;
 }
