--- a/src/components/UI/Modal/VerifyModal/VerifyModal.module.css
+++ b/src/components/UI/Modal/VerifyModal/VerifyModal.module.css
@@ -20,14 +20,14 @@
 }
 
 .SubmitButton {
-  margin-right: 5px;
+  /* margin-right: 5px; */
   width: 100%;
 }
 
-.CancelButton {
+/* .CancelButton {
   margin-left: 5px;
   width: 100%;
-}
+} */
 
 .VerifyResult {
   text-align: center;
