--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -1,4 +1,7 @@
 .Logo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   height: 100%;
   box-sizing: border-box;
   border-radius: 5px;
